# blog_generator

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: release.yml
highlights/: c_sharp.scm  julia.scm  pascal.scm  pwsh.scm
minificator/: Cargo.toml
minificator/src/: lib.rs
src/: article.rs  main.rs  markdown.rs  tree_sitter_html.rs  trim_offset.rs
templates/: article.html  index.html
