[package]
name    = "blog_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
minificator           = { path = "./minificator" }

clap                  = { version = "4.5", features = ["derive"] }
pulldown-cmark        = "0.13"
pulldown-cmark-escape = "0.11"
askama                = "0.15"
rayon                 = "1.11"
const_format          = "0.2"

tree-sitter            = "0.26"
tree-sitter-highlight  = "0.26"

tree-sitter-asm        = "0.24"
tree-sitter-bash       = "0.25"
tree-sitter-c          = "0.24"
tree-sitter-cpp        = "0.23"
tree-sitter-css        = "0.25"
tree-sitter-c-sharp    = "0.23"
tree-sitter-elixir     = "0.3"
tree-sitter-fsharp     = "0.1"
tree-sitter-java       = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-julia      = "0.23"
tree-sitter-html       = "0.23"
tree-sitter-kotlin-sg  = "0.4"
tree-sitter-lua        = "0.4"
tree-sitter-go         = "0.25"
tree-sitter-ocaml      = "0.24"
tree-sitter-pascal     = "0.10"
tree-sitter-php        = "0.24"
tree-sitter-powershell = "0.25"
tree-sitter-python     = "0.25"
tree-sitter-ruby       = "0.23"
tree-sitter-rust       = "0.24"
tree-sitter-scala      = "0.24"
tree-sitter-sequel     = "0.3"
tree-sitter-swift      = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-xml        = "0.7"
tree-sitter-zig        = "1.1"